--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ source venv/bin/activate
 
 export FLASK_APP="run.py"
 export APP_ENV="development"
-export SECRET="Lorem ipsum dolor sit amet, consectetur adipisicing elit"
+export SECRET_KEY="Lorem ipsum dolor sit amet, consectetur adipisicing elit"
 
 export DB_NAME="polylang_py"
 export TEST_DB_NAME="polylang_py_test"
